--- a/public/style.css
+++ b/public/style.css
@@ -205,3 +205,41 @@ tbody td {
   padding-bottom: 30px; 
   text-align: justify;
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+  .modal-main {
+    position:fixed;
+    background: white;
+    width: 80%;
+    height: auto;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+  
+}
+
+.display-block {
+  display: block;
+}
+
+.button-span { 
+  margin: auto; 
+  margin-bottom: 10px; 
+}
+
+.display-none {
+  display: none;
+}
+
+.moon-info { 
+  display: flex; 
+  flex-direction: row; 
+}
