--- a/public/style.css
+++ b/public/style.css
@@ -210,7 +210,7 @@ tbody td {
   padding-right: 80px; 
   padding-top: 30px; 
   padding-bottom: 30px; 
-  text-align: justify;
+  /* text-align: justify; */
 }
 
 .modal {
@@ -223,9 +223,14 @@ tbody td {
 }
 
   .modal-main {
+    padding-top: 20px; 
+    padding-bottom: 20px; 
     position:fixed;
-    background: white;
-    width: 80%;
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    background: rgb(255, 214, 235);
+    width: 60%;
     height: auto;
     top:50%;
     left:50%;
@@ -411,4 +416,9 @@ tbody td {
 .center { 
   display: flex; 
   justify-content: center; 
+}
+
+table { 
+  width: 90%; 
+  margin-bottom: 20px; 
 }
